# loong64-b1-go

./: .dockerignore  .env.example  .gitignore  AGENT.md  Containerfile  PLAN.md  README.md  appembed_stub.go  appembed_webui.go  compose.yaml  go.mod  go.sum  sqlc.yaml
.github/workflows/: auto-build.yml  cd-release.yml  code-quality.yml  container-smoke.yml
api/: openapi.yaml
cmd/migrate/: main.go
cmd/server/: main.go
cmd/upgrade/: main.go
docs/: ARCHITECTURE.md  AUTH_SESSIONS.md  CD_PIPELINE.md  CODE_REVIEW_CI.md  CONTAINER_RUNTIME.md  DEPLOYMENT_ASSISTANT.md  DEPLOY_KYLIN.md  LOCAL_POSTGRES.md  LOONGARCH_COMPATIBILITY.md  MVP_DELIVERY.md  PYTHON_AI_MIDDLEWARE.md  REPORT_EXPORTS.md  SECURITY.md  SECURITY_VALIDATION_RESULTS.md  SINGLE_BINARY_RUNTIME.md  STAGE7_DEPLOYMENT_VERIFICATION.md  SUBMISSION_UPLOAD.md  TEACHER_REVIEW.md  TEACHING_DOMAIN.md  UAT_CHECKLIST.md  UAT_LOCAL_RESULTS.md  VERIFICATION_EVALUATION.md
docs/adr/: 0001-python-ai-middleware-without-langchain.md
internal/aigateway/: client.go  (+1 more)
migrations/: 000001_foundation.sql  000002_teaching_domain.sql  000003_submission_artifacts.sql  000004_evaluation_initial.sql  000005_teacher_review_publish.sql  000006_report_exports.sql  000007_report_course_summary.sql  000008_assistant_context.sql  000009_auth_sessions.sql  README.md
python-ai-gateway/: README.md  pyproject.toml  requirements.txt
python-ai-gateway/ai_gateway/: __init__.py  app.py  evaluator.py  models.py  parser.py  retrieval.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+120 files in other folders)
