[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-ai-gateway"
version = "0.1.0"
description = "Internal AI middleware for loong64-b1-go"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
  "pypdf>=5.1,<6.0",
  "Pillow>=10.4,<11.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
